# matMul

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  matMulBench.cpp  matMulTest.cpp
src/: CMakeLists.txt  multiply.cpp  multiply.h
